--- a/app/src/main/res/layout-land/fragment_search.xml
+++ b/app/src/main/res/layout-land/fragment_search.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     android:gravity="top"
     android:orientation="horizontal"
+    android:textColor="#000000"
+    android:buttonTint="#FFFFFF"
     android:paddingTop="16dp"
     android:paddingEnd="16dp">
 
@@ -13,6 +15,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:textColor="#000000"
+        android:buttonTint="#FFFFFF"
         android:paddingTop="16dp">
 
         <EditText
@@ -20,12 +24,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
+            android:buttonTint="#FFFFFF"
+            android:inputType="text"
+            android:textColor="#FFFFFF" />
             android:inputType="text" />
 
         <Button
             android:id="@+id/search_button"
             android:layout_width="108dp"
             android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:buttonTint="#FFFFFF"
             android:text="Search" />
 
         <RadioGroup
@@ -38,12 +47,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="true"
+                android:textColor="#FFFFFF"
+                android:buttonTint="#FFFFFF"
                 android:text="videos" />
 
             <RadioButton
                 android:id="@+id/radio_channel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:buttonTint="#FFFFFF"
                 android:text="channels" />
 
         </RadioGroup>
@@ -52,12 +65,16 @@
             android:id="@+id/search_youtube"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
+            android:buttonTint="#FFFFFF"
             android:text="youtube" />
 
         <CheckBox
             android:id="@+id/search_bitchute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#FFFFFF"
+            android:buttonTint="#FFFFFF"
             android:text="bitchute" />
     </LinearLayout>
 
