--- a/app/src/main/res/layout/fragment_channel_properties.xml
+++ b/app/src/main/res/layout/fragment_channel_properties.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/bgColor"
     android:layout_margin="4dp">
+
 
     <LinearLayout
         android:id="@+id/linearLayout1"
