--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/simpleSwipeRefreshLayout"
+    android:background="?attr/bgColor"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,11 +10,12 @@
         android:id="@+id/vrv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"
+        android:background="?attr/bgColor"
         android:clipChildren="true"
         android:clipToPadding="true"
         android:paddingTop="8dp"
         android:orientation="horizontal"
         tools:layout_editor_absoluteX="-67dp"
         tools:layout_editor_absoluteY="270dp" />
+        android:textColor="?attr/textColor"
 </android.support.v4.widget.SwipeRefreshLayout>
