--- a/app/src/main/res/layout/smallvideolist.xml
+++ b/app/src/main/res/layout/smallvideolist.xml
@@ -3,7 +3,8 @@
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    cardview:cardCornerRadius="2dp"
+    cardview:cardCornerRadius="10dp"
+    android:background="?attr/bgColor"
     cardview:cardElevation="3dp"
     cardview:cardUseCompatPadding="true">
 
@@ -11,7 +12,7 @@
         android:id="@+id/RecView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"
+        android:background="?attr/bgColor"
         android:backgroundTint="#1AFFFFFF"
         android:foregroundTint="#1AFFFFFF">
 
@@ -55,7 +56,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginLeft="172dp"
             android:layout_marginTop="0dp"
-            android:background="#D0B95304"
+            android:background="?attr/bgColor"
             android:elevation="100dp"
             android:ems="10"
             android:text=""
