added chrome playback and properties as default option

--- a/app/src/main/res/layout-land/fragment_video_properties.xml
+++ b/app/src/main/res/layout-land/fragment_video_properties.xml
@@ -52,7 +52,12 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="embed" />
-
+                <Button
+                    android:id="@+id/properties_play_chrome"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Chrome" />
                 <Button
                     android:id="@+id/properties_play_webtorrent"
                     android:layout_width="wrap_content"
