--- a/app/src/main/res/layout-land/fragment_video_properties.xml
+++ b/app/src/main/res/layout-land/fragment_video_properties.xml
@@ -92,6 +92,12 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="youtube" />
+                <Button
+                    android:id="@+id/properties_download"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Download" />
 
                 <Button
                     android:id="@+id/closeButton"
