--- a/app/src/main/res/layout/fragment_video_properties.xml
+++ b/app/src/main/res/layout/fragment_video_properties.xml
@@ -16,7 +16,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:backgroundTint="#4F7DDB">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -31,73 +32,127 @@
                     android:layout_marginBottom="2dp"
                     android:background="#FFFFFF"
                     tools:srcCompat="@tools:sample/avatars" />
-            <HorizontalScrollView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" >
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                <HorizontalScrollView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content">
 
-                    <Button
-                        android:id="@+id/properties_play_exo"
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <Button
+                            android:id="@+id/properties_play_exo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="#1054CA"
+                            android:text="exo " />
+
+                        <Button
+                            android:id="@+id/properties_play_yt_embedded"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="#7E7956"
+                            android:text="embed" />
+                        <Button
+                            android:id="@+id/properties_play_bc_embedded"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="#1054CA"
+                            android:text="embed" />
+
+                        <Button
+                            android:id="@+id/properties_play_yt_chrome"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="#7E7956"
+                            android:text="Chrome" />
+
+                        <Button
+                            android:id="@+id/properties_play_bc_chrome"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="#1054CA"
+                            android:text="Chrome" />
+
+                        <Button
+                            android:id="@+id/properties_play_webtorrent"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="#1054CA"
+                            android:text="p2p" />
+
+                        <Button
+                            android:id="@+id/properties_play_yt_vlc"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="#7E7956"
+                            android:text="vlc" />
+
+                        <Button
+                            android:id="@+id/properties_play_bc_vlc"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="#1054CA"
+                            android:text="vlc" />
+
+                        <Button
+                        android:id="@+id/properties_play_bc_default"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="exo " />
-
-                    <Button
-                        android:id="@+id/properties_play_embedded"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="embed" />
-
-                <Button
-                    android:id="@+id/properties_play_chrome"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Chrome" />
-
-                <Button
-                        android:id="@+id/properties_play_webtorrent"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="p2p" />
-
-                    <Button
-                        android:id="@+id/properties_play_vlc"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="vlc" />
-
-                    <Button
-                        android:id="@+id/properties_play_default"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                            android:backgroundTint="#1054CA"
                         android:text="system" />
 
-                    <Button
-                        android:id="@+id/properties_play_newpipe"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="newpipe" />
+                        <Button
+                            android:id="@+id/properties_play_yt_default"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="#7E7956"
+                            android:text="system" />
 
-                    <Button
-                        android:id="@+id/properties_play_youtube"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="youtube" />
+                        <Button
+                            android:id="@+id/properties_play_local_default"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="system" />
 
-            </LinearLayout>
-            </HorizontalScrollView>
+                        <Button
+                            android:id="@+id/properties_play_newpipe"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="#7E7956"
+                            android:text="newpipe" />
+
+                        <Button
+                            android:id="@+id/properties_play_youtube"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="#7E7956"
+                            android:text="youtube" />
+
+                        <Button
+                            android:id="@+id/properties_download"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:backgroundTint="#1054CA"
+                            android:text="Download" />
+                    </LinearLayout>
+                </HorizontalScrollView>
 
                 <TextView
                     android:id="@+id/video_name"
